tests/baselines/reference/jsdocTypedefNoCrash2.errors.txt
tests/cases/compiler/export.js(1,13): error TS8008: 'type aliases' can only be used in a .ts file.


==== tests/cases/compiler/export.js (1 errors) ====
    export type foo = 5;
                ~~~
!!! error TS8008: 'type aliases' can only be used in a .ts file.
    /**
     * @typedef {{
     * }}
     */
    export const foo = 5;